// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage matches snapshot page has studies 1`] = `
<DocumentFragment>
  .c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13.c13 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c16 {
  text-overflow: ellipsis;
  max-width: 100%;
  overflow: hidden;
}

.c16.c16 {
  margin-bottom: -2px;
  margin-right: 4px;
}

.c1 {
  border: 1px solid rgb(235,237,240);
  padding: 20px 48px !important;
  box-shadow: 0 4px 12px rgba(0,0,0,0.15) !important;
  z-index: 900;
}

.c1 .ant-page-header-content {
  padding: 0;
}

.c1 .ant-page-header-heading-left {
  margin: 0;
}

.c2 {
  margin: 0 !important;
}

.c2.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1.14rem;
  line-height: 1.71rem;
}

.c0 {
  max-width: 100%;
  margin: auto;
}

.c0 .ant-row-no-wrap {
  overflow: scroll;
}

.c3 {
  border-right: 1px solid;
  border-color: #D9D9D9;
  padding: 48px;
}

.c7 {
  padding: 48px 0 0 48px;
}

.c4 {
  width: 224px;
  margin-bottom: 32px;
}

.c5.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.57rem;
}

.c6 {
  margin-bottom: 16px !important;
}

.c8 {
  margin-bottom: 28px !important;
}

.c8.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1.43rem;
  line-height: 2rem;
}

.c17 {
  margin: 48px 0 !important;
  border-color: #D9D9D9 !important;
  min-width: 100% !important;
  width: 100% !important;
}

.c9 {
  max-width: 1024px;
  overflow-x: scroll;
  padding-bottom: 16px;
}

.c10 {
  width: 282px;
  height: 176px;
  border-color: #D9D9D9 !important;
}

.c12.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1.14rem;
  line-height: 1.71rem;
}

.c14 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c14 .ant-badge-count {
  background-color: #227abd;
  padding-left: 8px;
  padding-right: 8px;
}

.c14 p {
  font-family: Roboto;
  font-size: 14px;
  line-height: 22px;
}

.c15 {
  margin-top: 16px;
}

.c23 {
  width: 100% !important;
  max-width: 1024px !important;
  margin-right: 48px;
  cursor: pointer;
}

.c18 {
  padding-bottom: 32px !important;
}

.c18 .ant-input-prefix {
  color: #BFBFBF;
}

.c19 {
  margin-right: 8px !important;
}

.c19 .ant-form-item-control-input {
  width: 298px;
}

.c20 {
  margin-right: 8px !important;
}

.c20 .ant-form-item-control-input {
  width: 298px;
}

.c21 {
  margin-right: 8px !important;
}

.c21 .ant-form-item-control-input {
  width: 106px;
}

.c22 {
  margin-right: 8px !important;
}

.c22 .ant-form-item-control-input {
  width: 221px;
}

<section
    class=""
    data-testid="__home-page__"
    style="opacity: 0; transform: translateY(300px) translateZ(0);"
  >
    <div
      class="c0"
    >
      <div
        class="ant-page-header c1 ant-page-header-ghost"
      >
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <h1
                class="ant-typography c2"
              >
                home:title
              </h1>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-no-wrap"
      >
        <div
          class="ant-col c3"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 24px;"
            >
              <div
                class="ant-space ant-space-vertical c4"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c5"
                  >
                    home:createButton.title
                  </span>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c6"
                  >
                    home:createButton.description
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    type="button"
                  >
                    <span>
                      home:createButton.button
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-vertical c4"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c5"
                  >
                    home:affiliateButton.title
                  </span>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c6"
                  >
                    home:affiliateButton.description
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    type="button"
                  >
                    <span>
                      home:affiliateButton.button
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col c7"
        >
          <h2
            class="ant-typography c8"
          >
            home:activeStudies
          </h2>
          <div
            class="c9"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-card ant-card-bordered ant-card-hoverable c10"
                  data-testid="__active-studies__"
                >
                  <div
                    class="ant-card-body"
                  >
                    <div
                      class="c11"
                    >
                      <h3
                        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line c12"
                      >
                        foo
                      </h3>
                      <div
                        class="c13 "
                      >
                        <span
                          class="ant-badge ant-badge-not-a-wrapper c14"
                        >
                          <sup
                            class="ant-scroll-number ant-badge-count"
                            data-show="true"
                            title="9"
                          >
                            <span
                              class="ant-scroll-number-only"
                              style="transition: none;"
                            >
                              <p
                                class="ant-scroll-number-only-unit current"
                              >
                                9
                              </p>
                            </span>
                          </sup>
                        </span>
                      </div>
                    </div>
                    <div
                      class="c15"
                    >
                      <span
                        class="ant-tag c16"
                      >
                        root:typeOptions.study_offer
                      </span>
                      <span
                        class="ant-tag c16"
                      >
                        juin 2021
                      </span>
                      <span
                        class="ant-tag c16"
                      >
                        clientName
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-divider ant-divider-horizontal c17"
            role="separator"
          />
          <h2
            class="ant-typography c8"
          >
            home:allStudies
          </h2>
          <form
            class="ant-form ant-form-inline c18"
            width="100%"
          >
            <div
              class="ant-row ant-form-item c19"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        class="ant-input"
                        id="title"
                        placeholder="home:table.form.title"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                          role="button"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c20"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="type_list_0"
                                aria-autocomplete="list"
                                aria-controls="type_list"
                                aria-haspopup="listbox"
                                aria-owns="type_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="type"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.type
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c21"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="status_list_0"
                            aria-autocomplete="list"
                            aria-controls="status_list"
                            aria-haspopup="listbox"
                            aria-owns="status_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="status"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.status
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c22"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.users
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn"
                      type="submit"
                    >
                      <span>
                        home:table.form.filterButton
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="ant-table-wrapper c23"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-bordered"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 303px; min-width: 303px;"
                          />
                          <col
                            style="width: 170px; min-width: 170px;"
                          />
                          <col
                            style="width: 140px; min-width: 140px;"
                          />
                          <col
                            style="width: 101px; min-width: 101px;"
                          />
                          <col
                            style="width: 232px; min-width: 232px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.title
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.type
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.startDate
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.status
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              home:table.users
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.notifications
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="6"
                            >
                              <div
                                class="ant-empty ant-empty-normal"
                              >
                                <div
                                  class="ant-empty-image"
                                >
                                  <svg
                                    class="ant-empty-img-simple"
                                    height="41"
                                    viewBox="0 0 64 41"
                                    width="64"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      transform="translate(0 1)"
                                    >
                                      <ellipse
                                        class="ant-empty-img-simple-ellipse"
                                        cx="32"
                                        cy="33"
                                        rx="32"
                                        ry="7"
                                      />
                                      <g
                                        class="ant-empty-img-simple-g"
                                        fill-rule="nonzero"
                                      >
                                        <path
                                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                        />
                                        <path
                                          class="ant-empty-img-simple-path"
                                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                        />
                                      </g>
                                    </g>
                                  </svg>
                                </div>
                                <div
                                  class="ant-empty-description"
                                >
                                  No Data
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`HomePage matches snapshot page is not ready 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="c0"
    data-testid="__loader__"
  >
    <div
      class="ant-spin ant-spin-lg ant-spin-spinning"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage matches snapshot page is ready 1`] = `
<DocumentFragment>
  .c1 {
  border: 1px solid rgb(235,237,240);
  padding: 20px 48px !important;
  box-shadow: 0 4px 12px rgba(0,0,0,0.15) !important;
  z-index: 900;
}

.c1 .ant-page-header-content {
  padding: 0;
}

.c1 .ant-page-header-heading-left {
  margin: 0;
}

.c2 {
  margin: 0 !important;
}

.c2.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1.14rem;
  line-height: 1.71rem;
}

.c0 {
  max-width: 100%;
  margin: auto;
}

.c0 .ant-row-no-wrap {
  overflow: scroll;
}

.c3 {
  border-right: 1px solid;
  border-color: #D9D9D9;
  padding: 48px;
}

.c7 {
  padding: 48px 0 0 48px;
}

.c4 {
  width: 224px;
  margin-bottom: 32px;
}

.c5.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.57rem;
}

.c6 {
  margin-bottom: 16px !important;
}

.c8 {
  margin-bottom: 28px !important;
}

.c8.ant-typography {
  font-style: normal;
  font-weight: 500;
  font-size: 1.43rem;
  line-height: 2rem;
}

.c10 {
  margin: 48px 0 !important;
  border-color: #D9D9D9 !important;
  min-width: 100% !important;
  width: 100% !important;
}

.c9 {
  max-width: 1024px;
  overflow-x: scroll;
  padding-bottom: 16px;
}

.c16 {
  width: 100% !important;
  max-width: 1024px !important;
  margin-right: 48px;
  cursor: pointer;
}

.c11 {
  padding-bottom: 32px !important;
}

.c11 .ant-input-prefix {
  color: #BFBFBF;
}

.c12 {
  margin-right: 8px !important;
}

.c12 .ant-form-item-control-input {
  width: 298px;
}

.c13 {
  margin-right: 8px !important;
}

.c13 .ant-form-item-control-input {
  width: 298px;
}

.c14 {
  margin-right: 8px !important;
}

.c14 .ant-form-item-control-input {
  width: 106px;
}

.c15 {
  margin-right: 8px !important;
}

.c15 .ant-form-item-control-input {
  width: 221px;
}

<section
    class=""
    data-testid="__home-page__"
    style="opacity: 0; transform: translateY(300px) translateZ(0);"
  >
    <div
      class="c0"
    >
      <div
        class="ant-page-header c1 ant-page-header-ghost"
      >
        <div
          class="ant-page-header-heading"
        >
          <div
            class="ant-page-header-heading-left"
          >
            <span
              class="ant-page-header-heading-title"
            >
              <h1
                class="ant-typography c2"
              >
                home:title
              </h1>
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-no-wrap"
      >
        <div
          class="ant-col c3"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 24px;"
            >
              <div
                class="ant-space ant-space-vertical c4"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c5"
                  >
                    home:createButton.title
                  </span>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c6"
                  >
                    home:createButton.description
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    type="button"
                  >
                    <span>
                      home:createButton.button
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space ant-space-vertical c4"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c5"
                  >
                    home:affiliateButton.title
                  </span>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <span
                    class="ant-typography c6"
                  >
                    home:affiliateButton.description
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn"
                    type="button"
                  >
                    <span>
                      home:affiliateButton.button
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col c7"
        >
          <h2
            class="ant-typography c8"
          >
            home:activeStudies
          </h2>
          <div
            class="c9"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
          <div
            class="ant-divider ant-divider-horizontal c10"
            role="separator"
          />
          <h2
            class="ant-typography c8"
          >
            home:allStudies
          </h2>
          <form
            class="ant-form ant-form-inline c11"
            width="100%"
          >
            <div
              class="ant-row ant-form-item c12"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        class="ant-input"
                        id="title"
                        placeholder="home:table.form.title"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                          role="button"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c13"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="type_list_0"
                                aria-autocomplete="list"
                                aria-controls="type_list"
                                aria-haspopup="listbox"
                                aria-owns="type_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="type"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.type
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c14"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="status_list_0"
                            aria-autocomplete="list"
                            aria-controls="status_list"
                            aria-haspopup="listbox"
                            aria-owns="status_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="status"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.status
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item c15"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          home:table.form.users
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn"
                      type="submit"
                    >
                      <span>
                        home:table.form.filterButton
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="ant-table-wrapper c16"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-bordered ant-table-empty"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 303px; min-width: 303px;"
                          />
                          <col
                            style="width: 170px; min-width: 170px;"
                          />
                          <col
                            style="width: 140px; min-width: 140px;"
                          />
                          <col
                            style="width: 101px; min-width: 101px;"
                          />
                          <col
                            style="width: 232px; min-width: 232px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.title
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.type
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.startDate
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.status
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              home:table.users
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                            >
                              <div
                                class="ant-table-column-sorters-with-tooltip"
                              >
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span>
                                    home:table.notifications
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="6"
                            >
                              <div
                                class="ant-empty ant-empty-normal"
                              >
                                <div
                                  class="ant-empty-image"
                                >
                                  <svg
                                    class="ant-empty-img-simple"
                                    height="41"
                                    viewBox="0 0 64 41"
                                    width="64"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      transform="translate(0 1)"
                                    >
                                      <ellipse
                                        class="ant-empty-img-simple-ellipse"
                                        cx="32"
                                        cy="33"
                                        rx="32"
                                        ry="7"
                                      />
                                      <g
                                        class="ant-empty-img-simple-g"
                                        fill-rule="nonzero"
                                      >
                                        <path
                                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                        />
                                        <path
                                          class="ant-empty-img-simple-path"
                                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                        />
                                      </g>
                                    </g>
                                  </svg>
                                </div>
                                <div
                                  class="ant-empty-description"
                                >
                                  No Data
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
